# aws-s3-client

./: Cargo.toml  README.md  add_windows_sdk_to_path.ps1  build.rs
examples/ps1/: copy_from_bucket_to_bucket.ps1  copy_multiple.ps1  copy_single_file.ps1  create_delete_buckets.ps1  download_folder1_flatten_with_regex.ps1  download_folder1_with_regex.ps1  list_be_rules_dev.ps1  list_be_rules_prod.ps1  list_buckets.ps1  list_republish_archive_1.ps1  list_republish_archive_2.ps1  list_republish_archive_2_sep.ps1  move_multiple.ps1  move_single_file.ps1  show_help.ps1  upload_files_to_republish.ps1  upload_files_to_republish_2.ps1  upload_files_to_republish_2_flat.ps1  upload_list_delete_files_to_republish.ps1
src/: bucket_operations.rs  cli.rs  client_bucket.rs  client_factory.rs  copy_operations.rs  date_utils.rs  file_delete.rs  file_download.rs  lib.rs  list_objects.rs  main.rs  output_printer.rs  result_sorter.rs  upload_files.rs
tests/: bucket_operation_tests.rs
