[package]
name = "aws_client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
glob = "0.3.0"
fancy-regex = "0.10.0"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
# snippet-start:[s3.rust.s3-object-lambda-cargo.toml]
aws-endpoint = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
# snippet-end:[s3.rust.s3-object-lambda-cargo.toml]
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
tokio = { version = "1.20.1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
aws-smithy-http = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main", features = ["rt-tokio"] }
chrono = "0.4.22"
tokio-stream = "0.1.8"
md-5 = "0.10.1"
bytes = "0.4.12"
http-body = "0.4.5"
rand = "0.5.0"
futures-util = { version = "0.3.21", features = ["alloc"] }

[build-dependencies]
winresource = "0.1.14"

[package.metadata.winresource]
ProductName = "Command Line AWS Client"
LegalCopyright = "Copyright © 2022"